--- a/Code/Testing.ipynb
+++ b/Code/Testing.ipynb
@@ -3,9 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "#copy & paste from https://www.kaggle.com/agostontorok/soccer-world-cup-2018-winner\n",
+    "#just for testing\n",
+    "\n",
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "from matplotlib import pyplot as plt\n",
